fixed navbar brand issue on mobile screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,13 @@ label {
 
 }
 
+@media screen and (max-width: 475px) {
+  .navbar-brand {
+    font-size: 1.08rem;
+  }
+}
+
+
 @media screen and (min-width: 992px) {
   .employer {
     margin-left: 6em;
